[package]
name = "rumblebars"
version = "0.1.3"
authors = ["Nicolas Cherel"]
description = "a handlerbars template expansion library"
homepage = "https://github.com/nicolas-cherel/rumblebars"
repository = "https://github.com/nicolas-cherel/rumblebars"
readme = "README.md"
keywords = ["handlerbars", "template", "expansion", "engine", "helper"]
license = "MIT/Apache-2.0"
build = "build.rs"

[features]
default     = ["stable"]
nightly     = ["rustlex"]
stable      = ["with-syntex"]
with-syntex = [ "syntex", "rustlex_codegen/with-syntex"]

[build-dependencies]
rustlex_codegen = { version = "*", optional = true }
rustlex         = { version = "*", optional = true }
syntex          = { version = "*", optional = true }

[lib]
name    = "rumblebars"
doctest = false

[dependencies]
rustc-serialize = "0.3"
regex           = "*"
lazy_static     = "*"
rustlex_codegen = { version = "*", optional = true }
rustlex         = { version = "*", optional = true }
syntex          = { version = "*", optional = true }

# for dev cycles
# [dependencies.rustlex]
# path = "../rustlex" # either this for local rustlex install
# git = "https://github.com/nicolas-cherel/rustlex" # or that for compat buffer
# branch = "rumblebars-compat"
