[package]
name = "rumblebars"
version = "0.3.0"
authors = ["Nicolas Cherel"]
description = "a handlerbars template expansion library"
homepage = "https://github.com/nicolas-cherel/rumblebars"
repository = "https://github.com/nicolas-cherel/rumblebars"
readme = "README.md"
keywords = ["handlerbars", "template", "expansion", "engine", "helper"]
license = "MIT/Apache-2.0"
build = "build.rs"

[features]
default     = ["stable"]
nightly     = ["nc_rustlex"]
stable      = ["with-syntex"]
with-syntex = [ "syntex", "nc_rustlex_codegen/with-syntex"]
stream_test = ["rand", "time"]


[build-dependencies]
nc_rustlex_codegen = { version = "*", optional = true }
syntex             = { version = "*", optional = true }

[lib]
name    = "rumblebars"

[dependencies]
rustc-serialize = "0.3"
regex           = "*"
lazy_static     = "*"
nc_rustlex_codegen = { version = "*", optional = true }
nc_rustlex         = { version = "*", optional = true }

rand            = { version = "*", optional = true }
time            = { version = "*", optional = true }

# for dev cycles
# [dependencies.rustlex]
# path = "../rustlex" # either this for local rustlex install
# git = "https://github.com/nicolas-cherel/rustlex" # or that for compat buffer
# branch = "rumblebars-compat"
